worlds_sources += [
  'Editor/DefaultUITheme.cpp',
  'Editor/Editor.cpp',
  'Editor/EditorUndo.cpp',
  'Editor/GuiUtil.cpp',
  'Editor/EditorWindows/AssetDBExplorer.cpp',
  'Editor/EditorWindows/Assets.cpp',
  'Editor/EditorWindows/EntityEditor.cpp',
  'Editor/EditorWindows/EntityList.cpp',
  'Editor/EditorWindows/GameControls.cpp',
  'Editor/EditorWindows/MaterialEditor.cpp',
  'Editor/EditorWindows/StyleEditor.cpp',
  'Editor/Editor.hpp',
  'Editor/GuiUtil.hpp',
  'Editor/EditorWindows/EditorWindows.hpp'
]