worlds_sources += [
  'Render/BlurRenderPass.cpp',
  'Render/BRDFLUTRenderer.cpp',
  'Render/CubemapConvoluter.cpp',
  'Render/CubemapSlots.cpp',
  'Render/GTAORenderPass.cpp',
  'Render/ImGuiRenderPass.cpp',
  'Render/MaterialSlots.cpp',
  'Render/PipelineCacheSerializer.cpp',
  'Render/PolyRenderPass.cpp',
  'Render/RenderTexture.cpp',
  'Render/ShaderCache.cpp',
  'Render/ShaderMetadata.cpp',
  'Render/ShadowmapRenderPass.cpp',
  'Render/TonemapRenderPass.cpp',
  'Render/vkrender.cpp',
  'Render/vkswapchain.cpp',
  'Render/VRCullMeshRenderer.cpp',
  'Render/Camera.hpp',
  'Render/Frustum.hpp',
  'Render/PackedMaterial.hpp',
  'Render/Render.hpp',
  'Render/RendererComponents.hpp',
  'Render/RenderGraph.hpp',
  'Render/RenderPasses.hpp',
  'Render/ResourceSlots.hpp',
  'Render/ShaderCache.hpp',
  'Render/ShaderMetadata.hpp'
]