worlds_sources += [
  'Scripting/ScriptBindClass.cpp',
  'Scripting/ScriptUtil.cpp',
  'Scripting/WrenVM.cpp',
  'Scripting/ScriptComponent.hpp',
  'Scripting/ScriptUtil.hpp',
  'Scripting/WrenVM.hpp',
  'Scripting/ScriptBindings/Entity.hpp',
  'Scripting/ScriptBindings/PhysicsActors.hpp',
  'Scripting/ScriptBindings/Random.hpp',
  'Scripting/ScriptBindings/Transform.hpp',
  'Scripting/ScriptBindings/Vec3.hpp'
]