worlds_sources += [
  'AssetCompilation/AssetCompilers.cpp',
  'AssetCompilation/AssetCompilerUtil.cpp',
  'AssetCompilation/ModelCompiler.cpp',
  'AssetCompilation/TextureCompiler.cpp',
  'AssetCompilation/AssetCompilers.hpp',
  'AssetCompilation/AssetCompilerUtil.hpp',
  'AssetCompilation/ModelCompiler.hpp',
  'AssetCompilation/TextureCompiler.hpp'
]