worlds_sources += [
  'AssetCompilation/AssetCompilerUtil.cpp',
  'AssetCompilation/AssetCompilers.cpp',
  'AssetCompilation/ModelCompiler.cpp',
  'AssetCompilation/TextureCompiler.cpp',
  'AssetCompilation/AssetCompilerUtil.hpp',
  'AssetCompilation/AssetCompilers.hpp',
  'AssetCompilation/ModelCompiler.hpp',
  'AssetCompilation/TextureCompiler.hpp'
]