worlds_sources += [
  'AssetCompilation/TextureCompiler.cpp',
  'AssetCompilation/AssetCompilerUtil.cpp',
  'AssetCompilation/AssetCompilers.cpp',
  'AssetCompilation/ModelCompiler.cpp',
  'AssetCompilation/AssetCompilerUtil.hpp',
  'AssetCompilation/AssetCompilers.hpp',
  'AssetCompilation/ModelCompiler.hpp',
  'AssetCompilation/TextureCompiler.hpp'
]