worlds_sources += [
  'Core/Fatal.cpp',
  'Core/EarlySDLUtil.cpp',
  'Core/SplashWindow.cpp',
  'Core/AssetDB.cpp',
  'Core/JobSystem.cpp',
  'Core/Console.cpp',
  'Core/Engine.cpp',
  'Core/MeshManager.cpp',
  'Core/SplashScreenImpls/SplashScreenX11.cpp',
  'Core/SplashScreenImpls/SplashScreenWin32.cpp',
  'Core/EarlySDLUtil.hpp',
  'Core/Fatal.hpp',
  'Core/ISystem.hpp',
  'Core/LogCategories.hpp',
  'Core/NameComponent.hpp',
  'Core/SplashWindow.hpp',
  'Core/Transform.hpp',
  'Core/IGameEventHandler.hpp',
  'Core/Log.hpp',
  'Core/Engine.hpp',
  'Core/JobSystem.hpp',
  'Core/Console.hpp',
  'Core/MeshManager.hpp',
  'Core/AssetDB.hpp',
  'Core/SplashScreenImpls/ISplashScreen.hpp',
  'Core/SplashScreenImpls/SplashScreenWin32.hpp',
  'Core/SplashScreenImpls/SplashScreenX11.hpp'
]