worlds_sources += [
  'Editor/AssetEditors.cpp',
  'Editor/DefaultUITheme.cpp',
  'Editor/Editor.cpp',
  'Editor/EditorSceneView.cpp',
  'Editor/EditorUndo.cpp',
  'Editor/GameProject.cpp',
  'Editor/ModelEditor.cpp',
  'Editor/TextureEditor.cpp',
  'Editor/UITextureManager.cpp',
  'Editor/GuiUtil.cpp',
  'Editor/EditorWindows/EntityEditor.cpp',
  'Editor/EditorWindows/GameControls.cpp',
  'Editor/EditorWindows/StyleEditor.cpp',
  'Editor/EditorWindows/AboutWindow.cpp',
  'Editor/EditorWindows/SceneSettingsWindow.cpp',
  'Editor/EditorWindows/EntityList.cpp',
  'Editor/EditorWindows/AssetEditor.cpp',
  'Editor/EditorWindows/Assets.cpp',
  'Editor/EditorWindows/BakingWindow.cpp',
  'Editor/EditorWindows/MaterialEditor.cpp',
  'Editor/EditorWindows/RawAssets.cpp',
  'Editor/UITextureManager.hpp',
  'Editor/AssetEditors.hpp',
  'Editor/ModelEditor.hpp',
  'Editor/TextureEditor.hpp',
  'Editor/Editor.hpp',
  'Editor/GuiUtil.hpp',
  'Editor/EditorWindows/EditorWindows.hpp'
]