worlds_sources += [
  'Editor/DefaultUITheme.cpp',
  'Editor/EditorUndo.cpp',
  'Editor/GameProject.cpp',
  'Editor/ModelEditor.cpp',
  'Editor/TextureEditor.cpp',
  'Editor/GuiUtil.cpp',
  'Editor/AssetEditors.cpp',
  'Editor/UITextureManager.cpp',
  'Editor/EditorSceneView.cpp',
  'Editor/Editor.cpp',
  'Editor/EditorWindows/EntityEditor.cpp',
  'Editor/EditorWindows/GameControls.cpp',
  'Editor/EditorWindows/StyleEditor.cpp',
  'Editor/EditorWindows/SceneSettingsWindow.cpp',
  'Editor/EditorWindows/EntityList.cpp',
  'Editor/EditorWindows/AssetEditor.cpp',
  'Editor/EditorWindows/Assets.cpp',
  'Editor/EditorWindows/BakingWindow.cpp',
  'Editor/EditorWindows/RawAssets.cpp',
  'Editor/EditorWindows/AboutWindow.cpp',
  'Editor/EditorWindows/MaterialEditor.cpp',
  'Editor/GuiUtil.hpp',
  'Editor/UITextureManager.hpp',
  'Editor/Editor.hpp',
  'Editor/AssetEditors.hpp',
  'Editor/ModelEditor.hpp',
  'Editor/TextureEditor.hpp',
  'Editor/EditorWindows/EditorWindows.hpp'
]