worlds_sources += [
  'Editor/EditorUndo.cpp',
  'Editor/AssetEditors.cpp',
  'Editor/UITextureManager.cpp',
  'Editor/GameProject.cpp',
  'Editor/TextureEditor.cpp',
  'Editor/ModelEditor.cpp',
  'Editor/EditorSceneView.cpp',
  'Editor/DefaultUITheme.cpp',
  'Editor/Editor.cpp',
  'Editor/GuiUtil.cpp',
  'Editor/EditorWindows/EntityEditor.cpp',
  'Editor/EditorWindows/GameControls.cpp',
  'Editor/EditorWindows/StyleEditor.cpp',
  'Editor/EditorWindows/SceneSettingsWindow.cpp',
  'Editor/EditorWindows/EntityList.cpp',
  'Editor/EditorWindows/AssetEditor.cpp',
  'Editor/EditorWindows/Assets.cpp',
  'Editor/EditorWindows/BakingWindow.cpp',
  'Editor/EditorWindows/RawAssets.cpp',
  'Editor/EditorWindows/AboutWindow.cpp',
  'Editor/EditorWindows/MaterialEditor.cpp',
  'Editor/UITextureManager.hpp',
  'Editor/AssetEditors.hpp',
  'Editor/ModelEditor.hpp',
  'Editor/TextureEditor.hpp',
  'Editor/Editor.hpp',
  'Editor/GuiUtil.hpp',
  'Editor/EditorWindows/EditorWindows.hpp'
]