worlds_sources += [
  'ImGui/cimgui.cpp',
  'ImGui/imgui_draw.cpp',
  'ImGui/imgui_impl_sdl.cpp',
  'ImGui/imgui_stdlib.cpp',
  'ImGui/imgui_impl_vulkan.cpp',
  'ImGui/ImGuizmo.cpp',
  'ImGui/imgui.cpp',
  'ImGui/imgui_demo.cpp',
  'ImGui/imgui_tables.cpp',
  'ImGui/imgui_widgets.cpp',
  'ImGui/ImGuizmo.h',
  'ImGui/imgui_impl_sdl.h',
  'ImGui/imgui_impl_vulkan.h',
  'ImGui/imgui_stdlib.h',
  'ImGui/imstb_rectpack.h',
  'ImGui/imstb_textedit.h',
  'ImGui/imstb_truetype.h',
  'ImGui/imgui.h',
  'ImGui/imgui_internal.h',
  'ImGui/imconfig.h'
]