worlds_sources += [
  'Libs/weldmesh.cpp',
  'Libs/cxxopts.hpp',
  'Libs/mikktspace.c',
  'Libs/pcg_basic.c',
  'Libs/volk.c',
  'Libs/IconsFontaudio.h',
  'Libs/IconsFontAwesome5.h',
  'Libs/mikktspace.h',
  'Libs/pcg_basic.h',
  'Libs/tiny_obj_loader.h',
  'Libs/volk.h',
  'Libs/weldmesh.h',
  'Libs/tiny_obj_loader.cc'
]