worlds_sources += [
  'Libs/weldmesh.cpp',
  'Libs/crnlib/crn_arealist.cpp',
  'Libs/crnlib/crn_assert.cpp',
  'Libs/crnlib/crn_checksum.cpp',
  'Libs/crnlib/crn_colorized_console.cpp',
  'Libs/crnlib/crn_command_line_params.cpp',
  'Libs/crnlib/crn_comp.cpp',
  'Libs/crnlib/crn_console.cpp',
  'Libs/crnlib/crn_core.cpp',
  'Libs/crnlib/crn_data_stream.cpp',
  'Libs/crnlib/crn_dds_comp.cpp',
  'Libs/crnlib/crn_decomp.cpp',
  'Libs/crnlib/crn_dxt.cpp',
  'Libs/crnlib/crn_dxt1.cpp',
  'Libs/crnlib/crn_dxt5a.cpp',
  'Libs/crnlib/crn_dxt_endpoint_refiner.cpp',
  'Libs/crnlib/crn_dxt_fast.cpp',
  'Libs/crnlib/crn_dxt_hc.cpp',
  'Libs/crnlib/crn_dxt_hc_common.cpp',
  'Libs/crnlib/crn_dxt_image.cpp',
  'Libs/crnlib/crn_dynamic_string.cpp',
  'Libs/crnlib/crn_etc.cpp',
  'Libs/crnlib/crn_file_utils.cpp',
  'Libs/crnlib/crn_find_files.cpp',
  'Libs/crnlib/crn_hash.cpp',
  'Libs/crnlib/crn_hash_map.cpp',
  'Libs/crnlib/crn_huffman_codes.cpp',
  'Libs/crnlib/crn_image_utils.cpp',
  'Libs/crnlib/crn_jpgd.cpp',
  'Libs/crnlib/crn_jpge.cpp',
  'Libs/crnlib/crn_ktx_texture.cpp',
  'Libs/crnlib/crn_lzma_codec.cpp',
  'Libs/crnlib/crn_math.cpp',
  'Libs/crnlib/crn_mem.cpp',
  'Libs/crnlib/crn_miniz.cpp',
  'Libs/crnlib/crn_mipmapped_texture.cpp',
  'Libs/crnlib/crn_pixel_format.cpp',
  'Libs/crnlib/crn_platform.cpp',
  'Libs/crnlib/crn_prefix_coding.cpp',
  'Libs/crnlib/crn_qdxt1.cpp',
  'Libs/crnlib/crn_qdxt5.cpp',
  'Libs/crnlib/crn_rand.cpp',
  'Libs/crnlib/crn_resample_filters.cpp',
  'Libs/crnlib/crn_resampler.cpp',
  'Libs/crnlib/crn_rg_etc1.cpp',
  'Libs/crnlib/crn_ryg_dxt.cpp',
  'Libs/crnlib/crn_sparse_bit_array.cpp',
  'Libs/crnlib/crn_stb_image.cpp',
  'Libs/crnlib/crn_strutils.cpp',
  'Libs/crnlib/crn_symbol_codec.cpp',
  'Libs/crnlib/crn_texture_comp.cpp',
  'Libs/crnlib/crn_texture_conversion.cpp',
  'Libs/crnlib/crn_texture_file_types.cpp',
  'Libs/crnlib/crn_threaded_resampler.cpp',
  'Libs/crnlib/crn_timer.cpp',
  'Libs/crnlib/crn_utils.cpp',
  'Libs/crnlib/crn_value.cpp',
  'Libs/crnlib/crn_vector.cpp',
  'Libs/crnlib/crn_zeng.cpp',
  'Libs/crnlib/crnlib.cpp',
  'Libs/cxxopts.hpp',
  'Libs/crnlib/crn_ryg_dxt.hpp',
  'Libs/crnlib/crn_ryg_types.hpp',
  'Libs/spirv_reflect.c',
  'Libs/mikktspace.c',
  'Libs/volk.c',
  'Libs/pcg_basic.c',
  'Libs/IconsFontAwesome5.h',
  'Libs/IconsFontaudio.h',
  'Libs/mikktspace.h',
  'Libs/tiny_obj_loader.h',
  'Libs/volk.h',
  'Libs/weldmesh.h',
  'Libs/pcg_basic.h',
  'Libs/crnlib/crn_arealist.h',
  'Libs/crnlib/crn_assert.h',
  'Libs/crnlib/crn_atomics.h',
  'Libs/crnlib/crn_buffer_stream.h',
  'Libs/crnlib/crn_cfile_stream.h',
  'Libs/crnlib/crn_checksum.h',
  'Libs/crnlib/crn_clusterizer.h',
  'Libs/crnlib/crn_color.h',
  'Libs/crnlib/crn_colorized_console.h',
  'Libs/crnlib/crn_command_line_params.h',
  'Libs/crnlib/crn_comp.h',
  'Libs/crnlib/crn_console.h',
  'Libs/crnlib/crn_core.h',
  'Libs/crnlib/crn_data_stream.h',
  'Libs/crnlib/crn_data_stream_serializer.h',
  'Libs/crnlib/crn_dds_comp.h',
  'Libs/crnlib/crn_dxt.h',
  'Libs/crnlib/crn_dxt1.h',
  'Libs/crnlib/crn_dxt5a.h',
  'Libs/crnlib/crn_dxt_endpoint_refiner.h',
  'Libs/crnlib/crn_dxt_fast.h',
  'Libs/crnlib/crn_dxt_hc.h',
  'Libs/crnlib/crn_dxt_hc_common.h',
  'Libs/crnlib/crn_dxt_image.h',
  'Libs/crnlib/crn_dynamic_stream.h',
  'Libs/crnlib/crn_dynamic_string.h',
  'Libs/crnlib/crn_etc.h',
  'Libs/crnlib/crn_file_utils.h',
  'Libs/crnlib/crn_find_files.h',
  'Libs/crnlib/crn_freeimage_image_utils.h',
  'Libs/crnlib/crn_hash.h',
  'Libs/crnlib/crn_hash_map.h',
  'Libs/crnlib/crn_helpers.h',
  'Libs/crnlib/crn_huffman_codes.h',
  'Libs/crnlib/crn_image.h',
  'Libs/crnlib/crn_image_utils.h',
  'Libs/crnlib/crn_intersect.h',
  'Libs/crnlib/crn_jpgd.h',
  'Libs/crnlib/crn_jpge.h',
  'Libs/crnlib/crn_ktx_texture.h',
  'Libs/crnlib/crn_lzma_codec.h',
  'Libs/crnlib/crn_math.h',
  'Libs/crnlib/crn_matrix.h',
  'Libs/crnlib/crn_mem.h',
  'Libs/crnlib/crn_miniz.h',
  'Libs/crnlib/crn_mipmapped_texture.h',
  'Libs/crnlib/crn_packed_uint.h',
  'Libs/crnlib/crn_pixel_format.h',
  'Libs/crnlib/crn_platform.h',
  'Libs/crnlib/crn_prefix_coding.h',
  'Libs/crnlib/crn_qdxt1.h',
  'Libs/crnlib/crn_qdxt5.h',
  'Libs/crnlib/crn_radix_sort.h',
  'Libs/crnlib/crn_rand.h',
  'Libs/crnlib/crn_ray.h',
  'Libs/crnlib/crn_rect.h',
  'Libs/crnlib/crn_resample_filters.h',
  'Libs/crnlib/crn_resampler.h',
  'Libs/crnlib/crn_rg_etc1.h',
  'Libs/crnlib/crn_sparse_array.h',
  'Libs/crnlib/crn_sparse_bit_array.h',
  'Libs/crnlib/crn_strutils.h',
  'Libs/crnlib/crn_symbol_codec.h',
  'Libs/crnlib/crn_texture_comp.h',
  'Libs/crnlib/crn_texture_conversion.h',
  'Libs/crnlib/crn_texture_file_types.h',
  'Libs/crnlib/crn_threaded_clusterizer.h',
  'Libs/crnlib/crn_threaded_resampler.h',
  'Libs/crnlib/crn_threading.h',
  'Libs/crnlib/crn_threading_null.h',
  'Libs/crnlib/crn_timer.h',
  'Libs/crnlib/crn_traits.h',
  'Libs/crnlib/crn_tree_clusterizer.h',
  'Libs/crnlib/crn_types.h',
  'Libs/crnlib/crn_utils.h',
  'Libs/crnlib/crn_value.h',
  'Libs/crnlib/crn_vec.h',
  'Libs/crnlib/crn_vec_interval.h',
  'Libs/crnlib/crn_vector.h',
  'Libs/crnlib/crn_vector2d.h',
  'Libs/crnlib/crn_zeng.h',
  'Libs/tiny_obj_loader.cc',
  'Libs/crnlib/lzma_7zBuf2.cpp',
  'Libs/crnlib/lzma_7zBuf.cpp',
  'Libs/crnlib/lzma_7zBuf.h',
  'Libs/crnlib/lzma_7zCrc.cpp',
  'Libs/crnlib/lzma_7zCrc.h',
  'Libs/crnlib/lzma_7zFile.cpp',
  'Libs/crnlib/lzma_7zFile.h',
  'Libs/crnlib/lzma_7zStream.cpp',
  'Libs/crnlib/lzma_7zVersion.h',
  'Libs/crnlib/lzma_Alloc.cpp',
  'Libs/crnlib/lzma_Alloc.h',
  'Libs/crnlib/lzma_Bcj2.cpp',
  'Libs/crnlib/lzma_Bcj2.h',
  'Libs/crnlib/lzma_Bra86.cpp',
  'Libs/crnlib/lzma_Bra.cpp',
  'Libs/crnlib/lzma_Bra.h',
  'Libs/crnlib/lzma_BraIA64.cpp',
  'Libs/crnlib/lzma_CpuArch.h',
  'Libs/crnlib/lzma_LzFind.cpp',
  'Libs/crnlib/lzma_LzFind.h',
  #'Libs/crnlib/lzma_LzFindMt.cpp',
  #'Libs/crnlib/lzma_LzFindMt.h',
  'Libs/crnlib/lzma_LzHash.h',
  'Libs/crnlib/lzma_LzmaDec.cpp',
  'Libs/crnlib/lzma_LzmaDec.h',
  'Libs/crnlib/lzma_LzmaEnc.cpp',
  'Libs/crnlib/lzma_LzmaEnc.h',
  'Libs/crnlib/lzma_LzmaLib.cpp',
  'Libs/crnlib/lzma_LzmaLib.h',
  'Libs/crnlib/lzma_MyVersion.h',
  #'Libs/crnlib/lzma_Threads.cpp',
  #'Libs/crnlib/lzma_Threads.h',
  'Libs/crnlib/lzma_Types.h'
]

if host_machine.system() == 'windows'
  worlds_sources += [
    'Libs/crnlib/crn_winhdr.h',
    'Libs/crnlib/crn_threading_win32.h',
    'Libs/crnlib/crn_threading_win32.cpp'
  ]
else
  worlds_sources += [
    'Libs/crnlib/crn_threading_pthreads.cpp',
    'Libs/crnlib/crn_threading_pthreads.h'
  ]
endif
