worlds_sources += [
  'Render/CubemapSlots.cpp',
  'Render/PipelineCacheSerializer.cpp',
  'Render/BRDFLUTRenderer.cpp',
  'Render/CubemapConvoluter.cpp',
  'Render/TextureSlots.cpp',
  'Render/MaterialSlots.cpp',
  'Render/ShaderCache.cpp',
  'Render/AdditionalShadowsPass.cpp',
  'Render/DebugLinesPass.cpp',
  'Render/DepthPrepass.cpp',
  'Render/ImGuiRenderPass.cpp',
  'Render/RTTPass.cpp',
  'Render/ShadowCascadePass.cpp',
  'Render/SkyboxPass.cpp',
  'Render/TonemapRenderPass.cpp',
  'Render/VRCullMeshRenderer.cpp',
  'Render/WorldSpaceUIPass.cpp',
  'Render/vkrender.cpp',
  'Render/vkswapchain.cpp',
  'Render/LightCullPass.cpp',
  'Render/PolyRenderPass.cpp',
  'Render/Loaders/RobloxMeshLoader.cpp',
  'Render/Loaders/ObjModelLoader.cpp',
  'Render/Loaders/SourceModelLoader.cpp',
  'Render/Loaders/VTFLoader.cpp',
  'Render/Loaders/CubemapLoader.cpp',
  'Render/Loaders/TextureLoader.cpp',
  'Render/Loaders/WMDLLoader.cpp',
  'Render/vku/DeviceMaker.cpp',
  'Render/vku/InstanceMaker.cpp',
  'Render/vku/DebugCallback.cpp',
  'Render/vku/Image.cpp',
  'Render/vku/Buffer.cpp',
  'Render/vku/PipelineMakers.cpp',
  'Render/vku/SamplerMaker.cpp',
  'Render/vku/vku.cpp',
  'Render/PackedMaterial.hpp',
  'Render/RendererComponents.hpp',
  'Render/RenderGraph.hpp',
  'Render/Camera.hpp',
  'Render/ShaderCache.hpp',
  'Render/Frustum.hpp',
  'Render/ResourceSlots.hpp',
  'Render/Render.hpp',
  'Render/RenderPasses.hpp',
  'Render/RenderInternal.hpp',
  'Render/Loaders/ObjModelLoader.hpp',
  'Render/Loaders/RobloxMeshLoader.hpp',
  'Render/Loaders/SourceModelLoader.hpp',
  'Render/Loaders/CubemapLoader.hpp',
  'Render/Loaders/WMDLLoader.hpp',
  'Render/Loaders/TextureLoader.hpp',
  'Render/vku/vku_framework.hpp',
  'Render/vku/DeviceMaker.hpp',
  'Render/vku/InstanceMaker.hpp',
  'Render/vku/DebugCallback.hpp',
  'Render/vku/DescriptorSetUtil.hpp',
  'Render/vku/RenderpassMaker.hpp',
  'Render/vku/vku.hpp'
]