worlds_sources += [
  'Render/AdditionalShadowsPass.cpp',
  'Render/BRDFLUTRenderer.cpp',
  'Render/CubemapConvoluter.cpp',
  'Render/CubemapSlots.cpp',
  'Render/DebugLinesPass.cpp',
  'Render/DepthPrepass.cpp',
  'Render/ImGuiRenderPass.cpp',
  'Render/LightCullPass.cpp',
  'Render/MainPass.cpp',
  'Render/MaterialSlots.cpp',
  'Render/PipelineCacheSerializer.cpp',
  'Render/PolyRenderPass.cpp',
  'Render/RTTPass.cpp',
  'Render/ShaderCache.cpp',
  'Render/ShadowCascadePass.cpp',
  'Render/SkyboxPass.cpp',
  'Render/TextureSlots.cpp',
  'Render/TonemapRenderPass.cpp',
  'Render/vkrender.cpp',
  'Render/vkswapchain.cpp',
  'Render/VRCullMeshRenderer.cpp',
  'Render/WorldSpaceUIPass.cpp',
  'Render/Loaders/CubemapLoader.cpp',
  'Render/Loaders/ObjModelLoader.cpp',
  'Render/Loaders/RobloxMeshLoader.cpp',
  'Render/Loaders/SourceModelLoader.cpp',
  'Render/Loaders/TextureLoader.cpp',
  'Render/Loaders/VTFLoader.cpp',
  'Render/Loaders/WMDLLoader.cpp',
  'Render/vku/Buffer.cpp',
  'Render/vku/DebugCallback.cpp',
  'Render/vku/DeviceMaker.cpp',
  'Render/vku/Image.cpp',
  'Render/vku/InstanceMaker.cpp',
  'Render/vku/PipelineMakers.cpp',
  'Render/vku/SamplerMaker.cpp',
  'Render/vku/vku.cpp',
  'Render/Camera.hpp',
  'Render/Frustum.hpp',
  'Render/PackedMaterial.hpp',
  'Render/Render.hpp',
  'Render/RendererComponents.hpp',
  'Render/RenderGraph.hpp',
  'Render/RenderInternal.hpp',
  'Render/RenderPasses.hpp',
  'Render/ResourceSlots.hpp',
  'Render/ShaderCache.hpp',
  'Render/Loaders/CubemapLoader.hpp',
  'Render/Loaders/ObjModelLoader.hpp',
  'Render/Loaders/RobloxMeshLoader.hpp',
  'Render/Loaders/SourceModelLoader.hpp',
  'Render/Loaders/TextureLoader.hpp',
  'Render/Loaders/WMDLLoader.hpp',
  'Render/vku/DebugCallback.hpp',
  'Render/vku/DescriptorSetUtil.hpp',
  'Render/vku/DeviceMaker.hpp',
  'Render/vku/InstanceMaker.hpp',
  'Render/vku/RenderpassMaker.hpp',
  'Render/vku/vku.hpp',
  'Render/vku/vku_framework.hpp'
]