worlds_sources += [
  'Scripting/NetVM.cpp',
  'Scripting/ScriptComponent.hpp',
  'Scripting/Export.hpp',
  'Scripting/AssetDBBindings.hpp',
  'Scripting/ConsoleBindings.hpp',
  'Scripting/EditorBindings.hpp',
  'Scripting/InputBindings.hpp',
  'Scripting/VRBindings.hpp',
  'Scripting/WorldObjectBindings.hpp',
  'Scripting/WorldTextBindings.hpp',
  'Scripting/ComponentMetadataBindings.hpp',
  'Scripting/CameraBindings.hpp',
  'Scripting/PhysicsBindings.hpp',
  'Scripting/NetVM.hpp',
  'Scripting/AudioBindings.hpp',
  'Scripting/AudioSourceBindings.hpp',
  'Scripting/RegistryBindings.hpp',
  'Scripting/WorldLightBindings.hpp',
  'Scripting/DynamicPhysicsActorBindings.hpp'
]