worlds_sources += [
  'Scripting/NetVM.cpp',
  'Scripting/AssetDBBindings.hpp',
  'Scripting/AudioBindings.hpp',
  'Scripting/AudioSourceBindings.hpp',
  'Scripting/CameraBindings.hpp',
  'Scripting/ComponentMetadataBindings.hpp',
  'Scripting/ConsoleBindings.hpp',
  'Scripting/DynamicPhysicsActorBindings.hpp',
  'Scripting/EditorBindings.hpp',
  'Scripting/Export.hpp',
  'Scripting/InputBindings.hpp',
  'Scripting/MeshManagerBindings.hpp',
  'Scripting/NetVM.hpp',
  'Scripting/PhysicsBindings.hpp',
  'Scripting/RegistryBindings.hpp',
  'Scripting/ScriptComponent.hpp',
  'Scripting/SkinnedWorldObjectBindings.hpp',
  'Scripting/VRBindings.hpp',
  'Scripting/WorldLightBindings.hpp',
  'Scripting/WorldObjectBindings.hpp',
  'Scripting/WorldTextBindings.hpp'
]